Added 4 other events to the events#show page and added a text below the sign up button

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -81,13 +81,16 @@ $(function () {
 
 <div class="container">
     <div class="row-fluid">
-        <div class="span4 key_stat green">
+        <div class="span3 key_stat green">
             Users This month
         </div>
-        <div class="span4 key_stat red">
+        <div class="span3 key_stat red">
+            Attendees this month
+        </div>
+        <div class="span3 key_stat red">
             Events this month
         </div>
-        <div class="span4 key_stat red">
+        <div class="span3 key_stat green">
             Revenue this month
         </div>
     </div>
