--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,9 @@
 										  <span>Sign up</span>
 										<% end %>
 	        						</span> 
+	        						<div>
+	        							Sign up and stay notified.
+	        						</div>
 	        						
 	        					<% end %>
         					</div>
