--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -8,31 +8,20 @@ $(function () {
                 text: ''
             },
             xAxis: {
-                labels: {
-                    formatter: function() {
-                        return this.value; // clean, unformatted number for year
-                    }
-                }
+                type: 'datetime',
             },
             yAxis: {
                 title: {
                     text: ''
-                },
-                labels: {
-                    formatter: function() {
-                        return this.value / 1000 +'k';
-                    }
                 }
             },
             tooltip: {
                 borderColor: "#fff",
                 backgroundColor: "rgba(255,255,255,1)",
-                pointFormat: '{series.name}: <b>{point.y:,.0f}</b> signed up in {point.x}'
+                pointFormat: '{series.name}: <b>{point.y:,.0f}</b> joined'
             },
             plotOptions: {
                 area: {
-                    pointStart: 1940,
-                    fillColor: 'rgba(221,65,36,.2)',
                     marker: {
                         enabled: false,
                         symbol: 'circle',
@@ -46,16 +35,22 @@ $(function () {
                 }
             },
             series: [{
-                name: 'Users',
+                name: 'Signups',
                 color: '#dd4124',
-                data: [null, null, null, null, null, 6 , 11, 32, 110, 235, 369, 640,
-                    1005, 1436, 2063, 3057, 4618, 6444, 9822, 15468, 20434, 24126,
-                    27387, 29459, 31056, 31982, 32040, 31233, 29224, 27342, 26662,
-                    26956, 27912, 28999, 28965, 27826, 25579, 25722, 24826, 24605,
-                    24304, 23464, 23708, 24099, 24357, 24237, 24401, 24344, 23586,
-                    22380, 21004, 17287, 14747, 13076, 12555, 12144, 11009, 10950,
-                    10871, 10824, 10577, 10527, 10475, 10421, 10358, 10295, 10104 ]
-            }]
+                fillColor: 'rgba(221,65,36,.2)',
+                pointInterval: <%= 1.day * 1000 %>,
+                pointStart: <%= 4.weeks.ago.to_i * 1000 %>,
+                data: <%= (4.weeks.ago.to_date..Date.today).map {|date| User.total_signups_on(date).to_i}.inspect %>
+            },
+            {
+                name: 'Attendees',
+                color: '#83ca21',
+                fillColor: 'rgba(131,202,33,.2)',
+                pointInterval: <%= 1.day * 1000 %>,
+                pointStart: <%= 4.weeks.ago.to_i * 1000 %>,
+                data: <%= (4.weeks.ago.to_date..Date.today).map {|date| Attendee.total_joins_on(date).to_i}.inspect %>
+            },
+            ]
         });
     });
     
