Email sending done on the send notifications button on the dashboard page. Integrating with twilio next

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -38,12 +38,15 @@ a:hover
 {
 	background: $grey;
 }
+/******************************************************************************/
 /* Buttons*/
-.btn {
+/******************************************************************************/
+.btn
+{
   border: none;
   padding: 0 10px;
   background: #34495e;
-  color: white;
+  color: $white;
   font-size: 16.5px;
   text-decoration: none;
   text-shadow: none;
@@ -54,68 +57,121 @@ a:hover
   -moz-transition: 0.25s;
   -o-transition: 0.25s;
   transition: 0.25s;
-  -webkit-backface-visibility: hidden; }
-  .btn:hover, .btn:focus {
-    background-color: #4e6d8d;
-    color: white;
-    -webkit-transition: 0.25s;
-    -moz-transition: 0.25s;
-    -o-transition: 0.25s;
-    transition: 0.25s;
-    -webkit-backface-visibility: hidden; }
-  .btn:active, .btn.active {
-    background-color: #2c3e50;
-    color: rgba(255, 255, 255, 0.75);
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
-  .btn.disabled, .btn[disabled] {
-    background-color: #95a5a6;
-    color: white; }
-  .btn.btn-large {
-    padding-bottom: 12px;
-    padding-top: 13px; }
-  .btn.btn-primary {
-    background-color: #1abc9c; }
-    .btn.btn-primary:hover, .btn.btn-primary:focus {
-      background-color: #2fe2bf; }
-    .btn.btn-primary:active, .btn.btn-primary.active {
-      background-color: #16a085; }
-  .btn.btn-info {
-    background-color: #3498db; }
-    .btn.btn-info:hover, .btn.btn-info:focus {
-      background-color: #5dade2; }
-    .btn.btn-info:active, .btn.btn-info.active {
-      background-color: #2383c4; }
-  .btn.btn-danger {
-    background-color: #e74c3c; }
-    .btn.btn-danger:hover, .btn.btn-danger:focus {
-      background-color: #ec7063; }
-    .btn.btn-danger:active, .btn.btn-danger.active {
-      background-color: #dc2d1b; }
-  .btn.btn-success {
-    background-color: #2ecc71; }
-    .btn.btn-success:hover, .btn.btn-success:focus {
-      background-color: #55d98d; }
-    .btn.btn-success:active, .btn.btn-success.active {
-      background-color: #27ad60; }
-  .btn.btn-warning {
-    background-color: #f1c40f; }
-    .btn.btn-warning:hover, .btn.btn-warning:focus {
-      background-color: #f4d03f; }
-    .btn.btn-warning:active, .btn.btn-warning.active {
-      background-color: #cea70c; }
-  .btn-toolbar .btn {
-    font-size: 18px;
-    padding: 10px 14px 9px; }
-    .btn-toolbar .btn:first-child {
-      -webkit-border-radius: 6px 0 0 6px;
-      -moz-border-radius: 6px 0 0 6px;
-      border-radius: 6px 0 0 6px; }
-    .btn-toolbar .btn:last-child {
-      -webkit-border-radius: 0 6px 6px 0;
-      -moz-border-radius: 0 6px 6px 0;
-      border-radius: 0 6px 6px 0; }
+  -webkit-backface-visibility: hidden; 
+}
+.btn:hover, .btn:focus 
+{
+  background-color: #4e6d8d;
+  color: white;
+  -webkit-transition: 0.25s;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-backface-visibility: hidden; 
+}
+.btn:active, .btn.active 
+{
+  background-color: #2c3e50;
+  color: rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none; 
+}
+.btn.disabled, .btn[disabled] 
+{
+  background-color: #95a5a6;
+  color: white; 
+}
+.btn.btn-large 
+{
+  padding-bottom: 12px;
+  padding-top: 13px; 
+}
+.btn.btn-small 
+{
+  padding-bottom: 6px;
+  padding-top: 7px; 
+}
+.btn.btn-primary 
+{
+  background-color: $contrast_green; 
+}
+.btn.btn-primary:hover, .btn.btn-primary:focus 
+{
+  background-color: $contrast_green_rgba; 
+}
+.btn.btn-primary:active, .btn.btn-primary.active 
+{
+  background-color: #16a085; 
+}
+.btn.btn-info 
+{
+  background-color: #3498db; 
+}
+.btn.btn-info:hover, .btn.btn-info:focus 
+{
+  background-color: #5dade2; 
+}
+.btn.btn-info:active, .btn.btn-info.active 
+{
+  background-color: #2383c4; 
+}
+.btn.btn-danger 
+{
+  background-color: #e74c3c; 
+}
+.btn.btn-danger:hover, .btn.btn-danger:focus 
+{
+  background-color: #ec7063; 
+}
+.btn.btn-danger:active, .btn.btn-danger.active 
+{
+  background-color: #dc2d1b; 
+}
+.btn.btn-success 
+{
+  background-color: #2ecc71; 
+}
+.btn.btn-success:hover, .btn.btn-success:focus 
+{
+  background-color: #55d98d; 
+}
+.btn.btn-success:active, .btn.btn-success.active 
+{
+  background-color: #27ad60; 
+}
+.btn.btn-warning 
+{
+  background-color: #f1c40f; 
+}
+.btn.btn-warning:hover, .btn.btn-warning:focus 
+{
+  background-color: #f4d03f; 
+}
+.btn.btn-warning:active, .btn.btn-warning.active 
+{
+  background-color: #cea70c; 
+}
+.btn-toolbar .btn 
+{
+  font-size: 18px;
+  padding: 10px 14px 9px; 
+}
+.btn-toolbar .btn:first-child 
+{
+  -webkit-border-radius: 6px 0 0 6px;
+  -moz-border-radius: 6px 0 0 6px;
+  border-radius: 6px 0 0 6px; 
+}
+.btn-toolbar .btn:last-child 
+{
+  -webkit-border-radius: 0 6px 6px 0;
+  -moz-border-radius: 0 6px 6px 0;
+  border-radius: 0 6px 6px 0; 
+}
+/******************************************************************************/
+/* General elements */
+/******************************************************************************/
 .float-left
 {
 	float: left;
@@ -124,8 +180,9 @@ a:hover
 {
 	float: right;
 }
-
+/******************************************************************************/
 /* Header Styling */
+/******************************************************************************/
 .header
 {
 	background: $header_background_color;
@@ -157,8 +214,9 @@ a:hover
 		float: right;
 	}
 }
-
+/******************************************************************************/
 /* Dashboard Styling */
+/******************************************************************************/
 ul.event_list
 {
 	list-style: none;
@@ -206,21 +264,11 @@ ul.event_list
     margin-left: 50px;
     margin-top: 10px;
     font-weight: bold;
-    a
-    {
-      color: #aaa;
-    }
-    a:hover
-    {
-      background: #aaa;
-      color: $white;
-    }
   }
 }
-
 .key_stat
 {
   padding: 10px;
   color: $white;
 }
-
+/******************************************************************************/
