Added the send notification code. It now sends out emails when the button is click in the admin page

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -80,7 +80,7 @@ a:hover
 .btn.disabled, .btn[disabled] 
 {
   background-color: #95a5a6;
-  color: white; 
+  color: $white; 
 }
 .btn.btn-large 
 {
