--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,6 @@
+/**********************************************************************/
+/* Common styles */
+/**********************************************************************/
 #error_explanation
 {
 	color: #d10000;
@@ -16,6 +19,17 @@
 {
 	margin-top: 10px;
 }
+.special
+{
+	background-color: #292929;
+}
+.white_background
+{
+	background: #fff;
+}
+/**********************************************************************/
+/* Login style */
+/**********************************************************************/
 .loginDetails
 {
 	margin-top: 10px;
@@ -242,7 +256,9 @@
 {
 	
 }
-
+/**********************************************************************/
+/* Event box styles */
+/**********************************************************************/
 .event {
   width: 90%;
   height: auto;
@@ -301,7 +317,40 @@
 {
 	margin-top: 10px;
 }
+/* Special event box styling */
+.event_special {
+  width: 90%;
+  height: auto;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  background: #292929;
+  border: 1px solid #181818;
+  border-radius: 3px; }
 
+.event_special::before,
+.event_special::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 2px;
+  right: 2px;
+  top: 0;
+  z-index: -1;
+  background: #292929;
+  border: 1px solid #181818; }
+
+.event_special::after {
+  left: 4px;
+  right: 4px;
+  bottom: -5px;
+  z-index: -2;
+  box-shadow: 0 8px 8px -5px rgba(0, 0, 0, 0.3); }
+.event_special p 
+{
+	color: #fff;
+}
+/**********************************************************************/
 .detail
 {
 	color: #ccc;
