Added bangalore to the city list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
 							    <option value="Hyderabad">Hyderabad</option>
 							    <option value="Mumbai">Mumbai</option>
 							    <option value="Ahmedabad">Ahmedabad</option>
+							    <option value="Bangalore">Bangalore</option>
 							  </select>
 							  <% if session[:city].nil? %>
 							  	<h4 class="selected_city">Select a City</h4>
