--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -64,50 +64,63 @@
     </div>
     
     <div class="tab-pane" id="tab2">
-      <div class="field">
-        <%= f.label :restaurant_id %>
-        <%# f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
-        <%= f.hidden_field :restaurant_id %>
 
-        <div class="row-fluid">
-          <div class="span6">
-            <% @restaurants.each do |restaurant| %>
-              <div class="restaurantDetailsCotaniner restaurant_hidden <%= restaurant.city %>" id="<%= restaurant.id %>"> 
-                <%= image_tag restaurant.photo_url(:thumb).to_s %>
-                <div class="restaurantDetails">
-                  <h4><%= restaurant.name %></h4>
-                  <h4>Price: <%= restaurant.price %> </h4>
-                  <a class="medium awesome blue">View menu</a>
-                </div>
-              </div>
-            <% end %>  
-            
-            
-          </div>
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#restaurants" data-toggle="tab">Restaurants</a></li>
+        <li><a href="#experiences" data-toggle="tab">Dining Experiences</a></li>
+      </ul>
 
-          <div class="span6">
-            <div class="restaurantMenu">
+      <div class="tab-content">
+        <div class="tab-pane active" id="restaurants">
+          <div class="field">
+            <%= f.label :restaurant_id %>
+            <%# f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
+            <%= f.hidden_field :restaurant_id %>
+
+            <div class="row-fluid">
+              <div class="span6">
                 <% @restaurants.each do |restaurant| %>
-                  <div class="menuItems" id="restaurant<%= restaurant.id %>menu">
-                    <% menu_items_categorized = restaurant.menu_items.group_by { |menu_item| menu_item.course_name} %>
-                    <% menu_items_categorized.each do |course_name, menu_items| %>
-                      <h4><%= course_name %></h4>
-                      <ul>
-                        <% menu_items.each do |menu_item| %>
-                          <li><%= menu_item.name %></li>
-                        <% end %>
-                      </ul>
-                    <% end %>
+                  <div class="restaurantDetailsCotaniner restaurant_hidden <%= restaurant.city %>" id="<%= restaurant.id %>"> 
+                    <%= image_tag restaurant.photo_url(:thumb).to_s %>
+                    <div class="restaurantDetails">
+                      <h4><%= restaurant.name %></h4>
+                      <h4>Price: <%= restaurant.price %> </h4>
+                      <a class="medium awesome blue">View menu</a>
+                    </div>
                   </div>
-              <% end %>                
-              
+                <% end %>  
+                
+                
+              </div>
 
-              </div> 
-            </div>
-            
-          </div>
+              <div class="span6">
+                <div class="restaurantMenu">
+                    <% @restaurants.each do |restaurant| %>
+                      <div class="menuItems" id="restaurant<%= restaurant.id %>menu">
+                        <% menu_items_categorized = restaurant.menu_items.group_by { |menu_item| menu_item.course_name} %>
+                        <% menu_items_categorized.each do |course_name, menu_items| %>
+                          <h4><%= course_name %></h4>
+                          <ul>
+                            <% menu_items.each do |menu_item| %>
+                              <li><%= menu_item.name %></li>
+                            <% end %>
+                          </ul>
+                        <% end %>
+                      </div>
+                  <% end %>                
+                  
 
+                  </div> 
+                </div>
+                
+              </div>
+
+            </div>    
         </div>
+        <div class="tab-pane" id="experiences">Dining Experiences</div>
+      </div>
+
+      
         
       </div>
       <div class="tab-pane" id="tab3">
@@ -147,3 +160,6 @@
     $('#event_event_time').timepicker();
   });
 </script>
+
+<script>   $(document).ready(function(){     $('#myTab a:last').tab('show');
+}); </script>
