Added a few more fields to the event table in the dashboard index page\

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -264,6 +264,10 @@ ul.event_list
     margin-left: 50px;
     margin-top: 10px;
     font-weight: bold;
+    span
+    {
+    	margin-right: 15px;
+    }
   }
 }
 .key_stat
