--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 <body <%= yield :body_class %>>
 
 	<div class="topBar">
-		<div class="navbar navbar-fixed-top">
+		<div class="navbar">
     		<div class="navbar-inner">
         		<div class="container">
         			<div class="row-fluid">
@@ -70,13 +70,6 @@
 	        						
 	        					<% end %>
         					</div>
-        				</div>
-        			</div>
-        		</div>
-        		<div class="container tagline-container">
-        			<div class="row-fluid">
-        				<div class="span5 offset4 tagline">
-        					
         				</div>
         			</div>
         		</div>
