Fixed the issue where there was a 20px space below the logo bar and the navbar

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,6 +58,10 @@
 {
 	text-decoration: none;
 }
+.navbar
+{
+	margin-bottom: 0;
+}
 .navbar-inner
 {
 	background-color: #d3371a;
@@ -572,15 +576,7 @@
 {
 	margin-bottom: 10px;
 }
-.tagline-container
-{
 
-}
-.tagline
-{
-	margin-top: 10px;
-	color: #fff;
-}
 .event_type_radio
 {
 	margin-top: 10px;
