--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
         <div class="container">
             <% eventCount = 0 %>
             <% @events.each do |event| %>
-                <% restaurant = Restaurant.find(event.restaurant_id) %>
+                <% restaurant = event.restaurant %>
                 <%# Checking if a new row has to be created %>
                 <% if eventCount == 0 %>
                     <div class="row-fluid">        
@@ -30,10 +30,10 @@
                         <% end %>
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
                         <div class="seats_left_event_page">
-                            <% if Attendee.where(:event_id => event.id).nil?%>
+                            <% if event.attendee.nil? %>
                                 <% seats_left = event.max_seats %>    
                             <% else %>
-                                <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).pluck(:seats).sum %>
+                                <% seats_left = event.max_seats - event.attendee.pluck(:seats).sum %>
                             <% end %>
                             <%= seats_left %> Seats left
                         </div>
@@ -52,8 +52,8 @@
                             <%= truncate(event.event_description, :length => 100) %> <%= link_to "See event", event_path(event) %>
                         </p>
                         <div class="peopleAttending">
-                            <% event.attendee.first(4).each do |personAttending| %>
-                                <% user =  User.find(personAttending.user_id) %>
+                            <% event.attendee.first(4).each do |attendee| %>
+                                <% user = attendee.user %>
                                 <% if user.image.blank? %>
                                     <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
                                 <% else %>
