Added a user authentication for access to the admin dashboard. If a user does not have the role admin then that user will be redirected to the homepage when they try to access the admin page

--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -209,9 +209,18 @@ a:hover
 			margin-right: 10px;
 		}
 	}
-	.user_info a
-	{
-		float: right;
+	.user_info 
+	{	
+
+		a
+		{
+			float: right;	
+			margin-left: 5px;
+		}
+		span
+		{
+			float: right;
+		}
 	}
 }
 /******************************************************************************/
