Added a meta tag and a title for all the pafge

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -67,7 +67,7 @@
 
       <ul class="nav nav-tabs">
         <li class="active"><a href="#restaurants" data-toggle="tab">Restaurants</a></li>
-        <li><a href="#experiences" data-toggle="tab">Dining Experiences</a></li>
+        <!--<li><a href="#experiences" data-toggle="tab">Dining Experiences</a></li>-->
       </ul>
 
       <div class="tab-content">
@@ -117,6 +117,8 @@
             </div>    
         </div>
 
+        <!--
+        Dining experiences. 
         <div class="tab-pane" id="experiences">
           <div class="field">
             <%# f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
@@ -165,6 +167,7 @@
 
             </div>  
         </div>
+        -->
       </div>
 
       
