--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,9 @@
 <% content_for :javascript do%>
 	<%= javascript_include_tag "restaurant_picker" %>
 	<%= javascript_include_tag "events" %>
+	<%= javascript_include_tag "jquery.bootstrap.wizard" %>
+	<%= javascript_include_tag "bootstrap-datepicker" %>
+	<%= javascript_include_tag "bootstrap-timepicker" %>
 <% end %>
 
 
