Modified the routes for the admin dsahboard

--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -26,9 +26,9 @@
 			<div class="row-fluid">
 				<div class="span8">
 					<ul>
-						<li><a href="#">Dashboard</a></li>
-						<li><a href="#">Users</a></li>
-						<li><a href="#">Events</a></li>
+						<li><a href="/admin">Dashboard</a></li>
+						<li><a href="/admin/users">Users</a></li>
+						<li><a href="/admin/events">Events</a></li>
 					</ul>
 				</div>
 				<div class="span4 user_info">
