--- a/app/views/admin/event/index.html.erb
+++ b/app/views/admin/event/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Event#index</h1>
-<p>Find me in app/views/admin/event/index.html.erb</p>
+<div class="container">
+	<div class="row-fluid">
+		<div class="span12">
+			<% @event_list.each do |city,events| %>
+			<h2><%= city %></h2>
+				<table class="table table-striped">
+					<tr>
+						<th>Name</th>
+						<th>Date</th>
+						<th>Seats Filled</th>
+						<th>Max Seats</th>
+					</tr>
+					<% events.each do |event| %>
+					  	<tr>
+					  		<td><%= event.event_name %></td>
+					  		<td><%= event.event_date %></td>
+					  	</tr>
+				  	<% end %>
+				</table>
+				
+			<% end %>
+		</div>
+	</div>
+</div>
